<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="Header_Text">Look at my GUI</string>
    <string name="Button_Text">CLICK HERE</string>
    <string name="Checkbox_Text">Check this out!</string>
    <string name="Switch_Text">Switch on / off</string>
    <string name="Input_Box">Type here</string>

    <string name="Toast_Message">Here is more information</string>
    <string name="snackbar_msg">The switch is now" "</string>
    <string name="on_msg">on</string>
    <string name="off_msg">off</string>
    <string name="snackbar_message_undo">undo</string>
    <string name="checkboxValue">The checkbox is now" "</string>

    <!-- lab3 -->
    <string name="line1">Enter your email address:</string>
    <string name="line2">Type email here</string>
    <string name="line3">Type your password:</string>
    <string name="login">Login</string>

    <!-- profileActivity -->
    <string name="your_profile">Your profile</string>
    <string name="your_name">Your name:</string>
    <string name="enter_name">Enter your name</string>
    <string name="your_email">Your email:</string>
    <string name="enter_email">Enter your email</string>
    <string name="your_picture">Your picture:</string>
    <string name="click_button">Click the button above to take a picture</string>
    <!-- lab3 profile Activity -->
    <string name="goto_chat">Go to chat</string>
    <string name="sendButton">SEND</string>
    <string name="typeHere">Type here</string>
    <string name="recieveButton">RECIEVE</string>

    <!-- lab6 -->
    <string name="goto_weather">Go to Weather Forecast</string>

    <!-- lab8 -->
    <string name="open">open</string>
    <string name="close">close</string>


</resources>
