<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="3"
    android:columnCount="2">

    <TextView android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Header_Text"
        android:textSize="30dp"
        android:layout_columnSpan="2"/>

    <Button android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button_Text"
        android:layout_columnWeight="1"
        android:layout_columnSpan="1"/>

    <CheckBox android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Checkbox_Text"
        android:layout_columnWeight="1"
        android:layout_columnSpan="1"/>
        <!--android:onClick="toastMsg"-->

    <ImageButton android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/flag"
        android:layout_columnWeight="1"
        android:layout_columnSpan="1"/>

    <Switch android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Switch_Text"
        android:layout_columnWeight="1"
        android:layout_columnSpan="1"
        />

    <EditText android:id="@+id/editTextBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/Input_Box"
        android:layout_columnSpan="2"/>

</GridLayout>