<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="27dp"
    android:layout_marginBottom="27dp"
    android:layout_marginLeft="48dp"
    android:layout_marginRight="48dp">

    <TextView
        android:id="@+id/firstLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/line1"
        android:nextFocusDown="@id/emailInput"/>

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/line2"
        android:inputType="textEmailAddress"
        android:nextFocusUp="@id/firstLine"
        android:nextFocusDown="@id/thirdLine"/>

    <TextView
        android:id="@+id/thirdLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/line3"
        android:nextFocusUp="@id/emailInput"
        android:nextFocusDown="@id/fourthLine"/>

    <EditText
        android:id="@+id/fourthLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:nextFocusUp="@id/thirdLine"
        android:nextFocusDown="@id/loginButton"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:nextFocusUp="@id/fourthLine"/>

</LinearLayout>